# Atlas-Aegis

./: .gitignore  DATASET_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
configs/: benchmark.yaml  budget.yaml  detector_eval.yaml  detector_eval_candidate.yaml  detector_eval_candidate_highrecall.yaml  detector_eval_candidate_highrecall_corruptaware.yaml  detector_eval_full41_fast.yaml  detector_eval_full41_highrecall.yaml  detector_eval_highrecall.yaml  detector_eval_highrecall_corruptaware_fast.yaml  detector_fast.yaml  detector_highrecall.yaml  detector_highrecall_blur_rescue.yaml  detector_highrecall_corruptaware.yaml  detector_highrecall_corruptaware_quick.yaml  detector_highrecall_poisson_focus_1600.yaml  detector_highrecall_poisson_focus_mid.yaml  detector_highrecall_poisson_focus_quick.yaml  export_benchmark.yaml  inference.yaml  inference_visdrone_mot_val.yaml  inference_visdrone_mot_val_seq2.yaml  latency_benchmark.yaml  mot_eval.yaml  pipeline.yaml  risk.yaml
governance/: data_retention_access_policy.md  legal_status.yaml  production_data_checklist.md
reports/: Atlas_Aegis_Proje_Kapanis_Master_Raporu_2026-02-25.txt
scripts/: 00_env_check.py  01_data_lint.py  01_download_data.sh  01_prepare_manual_data.sh  02_budget_guard_demo.py  03_smoke_run.py  04_eval_tier.py  05_run_track_risk.py  06_benchmark_corruptions.py  07_dataset_status.py  08_prepare_visdrone_det.py  09_train_detector.py  10_eval_detector.py  11_download_weights.sh  12_build_corruption_aug_det.py  13_eval_mot.py  14_resolve_best_model.py  (+13 more)
(+15 files in other folders)
